; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/catalog/extr_pg_enum.c_EstimateEnumBlacklistSpace.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/catalog/extr_pg_enum.c_EstimateEnumBlacklistSpace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@enum_blacklist = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @EstimateEnumBlacklistSpace() #0 {
  %1 = alloca i64, align 8
  %2 = load i64, i64* @enum_blacklist, align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %7

4:                                                ; preds = %0
  %5 = load i64, i64* @enum_blacklist, align 8
  %6 = call i64 @hash_get_num_entries(i64 %5)
  store i64 %6, i64* %1, align 8
  br label %8

7:                                                ; preds = %0
  store i64 0, i64* %1, align 8
  br label %8

8:                                                ; preds = %7, %4
  %9 = load i64, i64* %1, align 8
  %10 = add i64 %9, 1
  %11 = mul i64 4, %10
  %12 = trunc i64 %11 to i32
  ret i32 %12
}

declare dso_local i64 @hash_get_num_entries(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
